* Minor fix for journal header margin that caused unnecessary height animation flickering

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -857,7 +857,6 @@
 .application-list__item-header--journal-entry {
   cursor: pointer;
   flex-flow: row wrap;
-  margin: 0 0 15px;
 
   @include breakpoint($breakpoint-pad) {
     flex-flow: row nowrap;
